# kcc-attendance

./: .gitignore  README.md  Tasks.md  pyproject.toml
data/: embeddings.npy
models/: detector.nb
models/rknn-weights/: scrfd_2.5g.rknn  w600k_r50.rknn
scripts/: convert_models.py  enroll_faces.py  inspect_models.py  inspect_rknn_models.py
src/: __init__.py  app.py  config.py  detector.py  engine.py  face_db.py  recognizer.py  schema.py  test.py  utils.py
